# petsc-hs

./: .gitignore  .travis.yml  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  Setup.hs  c2hs-build.sh  download-petsc.sh  install-petsc.sh  install-slepc.sh  makefile  petsc-hs-setup.sh  petsc-hs.cabal  setup.sh  stack-build.sh  stack-exec-example.sh  stack-haddock.sh  stack.yaml  update-petsc-hs.sh
doc/dev/: DEV_INFO  DEV_INFO.md  FIXME
examples/: TaoBlackScholes.hs  TestFEM.hs  TestMain2.hs
src/Numerical/: PETSc.hs
src/Numerical/PETSc/: Algebra.hs  Internal.hs  Internal2.hs  Internal3.hs  InternalTest.hs  Main.hs  Matrix.hs  Raw.hs  Repl.hs  Spec.hs  TaoBlackScholes.hs  Test.hs  Test1.hs  Test2.hs  Test2_1.hs  TestMain.hs  TestMain2.hs  Tests.hs  Types.chs  Types.hs  Vector.hs
src/Numerical/PETSc/Apps/: FEM.hs  TaoBlackScholes.hs
src/Numerical/PETSc/Internal/: Class.hs  Display.hs  Exception.hs  IO.hs  Indexing.hs  InlineC.hs  InlineCInternal.hs  Internal.hs  Managed.hs  MemoryMonad.hs  Mutable.hs  Product.hs  PutGet.hs  ST.hs  Sized.hs  Sparse.hs  Static.hs  Store.hs  Types.hs  TypesC2Hs.chs  TypesInternal.chs  Utils.hs  Vectorized.hs
src/Numerical/PETSc/Internal/C2HsGen/: GenerateC2Hs.hs  TypesC2HsGen.hs
src/Numerical/PETSc/Internal/Class/: Additive.hs  RealVectorSpace.hs  TolSpace.hs
src/Numerical/PETSc/Internal/Hybrid/: DMVec.hs  Indexing.hs
src/Numerical/PETSc/Internal/InlineC/: IS.hs
src/Numerical/PETSc/Internal/Meta/: .chs  GenerateC2Hs.hs
src/Numerical/PETSc/Internal/PutGet/: DM.hs  EPS.hs  IS.hs  KSP.hs  Mat.hs  PC.hs  PF.hs  PetscMisc.hs  SF.hs  SNES.hs  SVD.hs  SlepcMisc.hs  TAO.hs  TS.hs  Vec.hs  Viewer.hs
src/Numerical/PETSc/Internal/Storable/: Class.hs  Common.hs  Matrix.hs  Repa.hs  StorableContainer.hs  Store.hs  Vector.hs
src/Numerical/PETSc/Optimization/: Class.hs
src/Numerical/PETSc/Raw/: Algebra.hs  Algebra2.hs  Exception.hs  InlineC.hs  Internal.hs  NumericFormats.hs  PutGet.hs  Storable.hs  Types.hs  TypesInternal.chs  Utils.hs  Vector.hs
src/Numerical/PETSc/Raw/PutGet/: DM.hs  IS.hs  KSP.hs  Mat.hs  PF.hs  PetscMisc.hs  SNES.hs  Vec.hs  Viewer.hs
src/Numerical/PETSc/Raw/Storable/: Vector.hs
test/: DocTest.hs  Grind.hs  Main.hs
